# browser-defrag

./: .kateproject  COPYING  Cargo.toml  Justfile  PKGBUILD.aur  PKGBUILD.local  README.adoc
src/: args.rs  chromium.rs  common.rs  defrag.rs  firefox.rs  main.rs  report.rs  unknown.rs
tests/: multiple-profiles.ini  single-profiles.ini
