[package]
name = "browser-defrag"
version = "0.2.1"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "A tool for defragging browser's database files"
documentation = "https://github.com/bpetlert/browser-defrag"
homepage = "https://github.com/bpetlert/browser-defrag"
license = "GPL-3.0-or-later"
readme = "README.adoc"
repository = "https://github.com/bpetlert/browser-defrag"

edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
configparser = "3.0.2"
humansize = "2.1.3"
sqlite = "0.30.4"
sysinfo = "0.28.4"
tabled = "0.11.1"
tempfile = "3.5.0"
tracing = { version = "0.1.37", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
walkdir = "2.3.3"

[dev-dependencies]
pretty_assertions = "1.3.0"
