[package]
name = "browser-defrag"
version = "0.2.1"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "A tool for defragging browser's database files"
documentation = "https://github.com/bpetlert/browser-defrag"
homepage = "https://github.com/bpetlert/browser-defrag"
license = "GPL-3.0-or-later"
readme = "README.adoc"
repository = "https://github.com/bpetlert/browser-defrag"

edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
configparser = "3.0.2"
humansize = "2.1.3"
sqlite = "0.31.1"
sysinfo = "0.29.10"
tabled = "0.14.0"
tempfile = "3.8.1"
tracing = { version = "0.1.40", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
walkdir = "2.4.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
