[package]
name = "browser-defrag"
version = "0.2.1"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "A tool for defragging browser's database files"
documentation = "https://github.com/bpetlert/browser-defrag"
homepage = "https://github.com/bpetlert/browser-defrag"
license = "GPL-3.0-or-later"
readme = "README.adoc"
repository = "https://github.com/bpetlert/browser-defrag"

edition = "2021"
publish = false

[dependencies]
anyhow = "~1"
clap = { version = "~4", features = ["derive"] }
configparser = "~3"
humansize = "~2"
sqlite = "~0.36"
sysinfo = "~0.33"
tabled = "~0.17"
tempfile = "~3"
tracing = { version = "~0.1", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "~0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
walkdir = "~2"

[dev-dependencies]
pretty_assertions = "~1"
